* IECoreGL::Renderer now ignores shader types with a prefix other than gl: (apart from "surface"), rather than complaining about them.
* IECoreHoudini FnOpHolder and FnProceduralHolder.create() now accept optional parent node and contextArgs parameters. The later should be a kwargs dict from a Houdini UI callback

Bug Fixes :

* ToMayaMeshConverter uses the stIndices variable to compress the UVs in the mesh if the variable is available.
* Fixed include guard in ObjectReader.h
* Added workaround for recent NVIDIA driver changes which could cause crashes in IECoreGL::Shader.
* Fixed a bug where writing an IECore::Group to disk then reading it back in again jumbled its state/children up
* Fixed a bug where IECore::CapturingRenderer wrote redundant state into its output when multi threaded procedurals were being used
* Fixed an attribute leaking bug with single threaded procedurals in IECore::CapturingRenderer

7.9.0 :

Additions :

* Added const version of CameraController::getCamera().

* Added ToArnoldConverter::create() factory function.

* Implemented tbb_hasher( const IECore::MurmurHash & ), allowing MurmurHash to be used as a key in tbb::concurrent_hash_map.

* Added IECoreArnold::InstancingConverter class, which can be used to manage a series of conversions from IECore::Primitive to Arnold AtNodes, returning Arnold instances when duplicate geometry is detected.

* IECoreArnold::Renderer now automatically creates instances when identical primitives are rendered repeatedly. This may be controlled using the new "ai:automaticInstancing" attribute.

Bug Fixes :

* Fixed bug in CameraController which could cause crashes for cameras with preexisting transforms, and failure to update transforms correctly after swapping cameras with setCamera().

7.8.0 :

Additions :

* Added an ls() method to IECoreMaya.FnParameterisedHolder, and a _getMayaNodeType() method so it works with derived classes

* Added initial support for mantra.
